# cicd-rust

./: .env  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml  general.yml
src/: lib.rs  main.rs
