[package]
name = "cicd-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib] # lib
name = "hello_lib"
path = "src/lib.rs"

# can be removed if only lib crate. Integration testing is done in test directory not in main
[[bin]] # bin to run HelloWorld
name = "cicd-rust"
path = "src/main.rs"


[dependencies]



[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate"
]

[dev-dependencies]


[features]
default = ["feature"]
feature = []